# chatstream-moderate

./: .gitignore  .secrets.baseline  README.md  agents.md  app.py  deploy.sh  pyproject.toml  requirements.txt  test_multiuser.py  test_webhook.py  uwsgi.ini
docs/: spec.md
migrations/versions/: d762fcc9b2f9_add_wiki_username_to_messages.py
src/: admin_bp.py  auth.py  display_bp.py  models.py  queue_bp.py  utils.py  webhook.py
static/css/: app.css
static/js/: user-picker.js
templates/: base.html  dev_mock.html  index.html  queue.html  queue_messages.html
templates/admin/: channel_blacklist.html  channel_edit.html  channel_settings.html  channel_whitelist.html  channels.html  dashboard.html  global_blacklist.html  simulation.html
templates/queue/: log.html
tests/: README.md  test_multiuser.py  test_webhook.py
