[project]
name = "chatstream-moderate"
version = "0.1.0"
description = "Real-time chat moderation for Eventyay streams"
requires-python = "==3.11.*"

dependencies = [
    "flask>=3.1",
    "flask-sqlalchemy>=3.1",
    "flask-session>=0.8",
    "flask-migrate>=4.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pymysql>=1.1",
    "requests>=2.31",
    "nh3>=0.2",
    "lingua-language-detector>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
